Your commit message

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,1 +1,6 @@
 platformName=Android
+deviceName=Pixel2
+platformVersion=10.0
+automationName=UiAutomator2
+app=/Users/yusuf/IdeaProjects/Appium_T120/Apps/Calculator_8.4.1 (520193683)_Apkpure.apk
+url=http://127.0.0.1:4723/wd/hub
